--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -1,3 +1,4 @@
 rules: {
   "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+  "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
 }
